mejoras en la seccion de comunidad
